--- a/TUBES.cbp
+++ b/TUBES.cbp
@@ -33,6 +33,8 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
+		<Unit filename="rumahsakit.cpp" />
+		<Unit filename="rumahsakit.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
